fix scrollbar issue

--- a/imgedit/style.css
+++ b/imgedit/style.css
@@ -1,8 +1,5 @@
-body {
-    width: 100%;
-    height: 100%;
+html {
     background-color: #E3CF91;
-    margin: 0;
     font-family: 'Lato', sans-serif;
     text-align: center;
 }
