--- a/index/style.css
+++ b/index/style.css
@@ -2,9 +2,7 @@
 	font-family: 'Open Sans', sans-serif;
 }
 
-body {
-	margin: 0;
-	padding: 0;
+html {
 	background-color: #202020;
 
 	text-align: center;
