--- a/wordcounter/style.css
+++ b/wordcounter/style.css
@@ -1,8 +1,5 @@
-body {
-    width: 100%;
-    height: 100%;
+html {
     background-color: lightgray;
-    margin: 0;
 }
 
 #content {
